--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,9 +14,10 @@ main{
 .container{
     max-width: 32rem;
     padding: 1.8rem;
-    border-radius: 1.5rem;
+    border-radius: 2rem;
     background-color: var(--card-bg-color);
     text-align: center;
+    box-shadow: 0px 10px 40px #0000002a;
 }
 
 .container .qr-code{
