--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,7 +1,3 @@
-html{
-    font-size: 62.5%;
-}
-
 main{
     font-family: 'Outfit', sans-serif;
     min-height: 100vh;
@@ -11,7 +7,7 @@ main{
     align-items: center;   
 }
 
-.container{
+.card{
     max-width: 32rem;
     padding: 1.8rem;
     border-radius: 2rem;
@@ -20,19 +16,22 @@ main{
     box-shadow: 0px 10px 40px #0000002a;
 }
 
-.container .qr-code{
+.card .qr-code{
     width: 100%;
     border-radius: 1rem;
 }
 
-.container .title{
-    padding: 2.2rem 1rem 0;
-    font-size: 2.2rem;
-    color: var(--title-primary-color);
+.card .text{
+    padding: 2.2rem 1rem;
 }
 
-.container .info{
-    padding: 1.6rem 1rem 2.5rem;
+.card .text .title{
+    font-size: 2.2rem;
+    color: var(--title-color);
+}
+
+.card .text .info{
+    margin-top: 1.8rem;
     font-size: 1.5rem;
     color: var(--text-color);
 }
